# tycho_sipwitchqt

./: .gitattributes  .gitignore  .gitlab-ci-saved.yml  .gitlab-ci.yml  .gitmodules  .rubocop.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile-build-documentation.md  Dockerfile-build-executable.md  Doxyfile  Doxyfile.in  LICENSE  README.md  SipWitchEs.pro  SipWitchQt.cbp  SipWitchQt.pro  TODO.md  callgraph.sh  config.hpp.in  desktop.plist.in  desktop.rc.in  helloworld.c  server.rc.in  setup.iss.in  sipwitches.spec  sipwitchqt.spec  sipwitchqt.spec.in  sonar.properties
.gitlab/issue_templates/: Task.md  UserStory.md
Archive/: Archive.pri  Archive.spec
Bootstrap/: Bootstrap.cmd  Bootstrap.pri  Bootstrap.sh  CMakeLists.txt  libeXosip2.cmake  libosip2.cmake  openssl-patch.cmd
Common/: args.cpp  args.hpp  compiler.hpp  console.cpp  console.hpp  contact.cpp  contact.hpp  crashhandler.cpp  crashhandler.hpp  crypto.cpp  crypto.hpp  inline.hpp  logging.cpp  output.cpp  output.hpp  server.cpp  server.hpp  types.cpp  types.hpp  util.cpp  util.hpp
Connect/: connector.cpp  connector.hpp  control.cpp  control.hpp  listener.cpp  listener.hpp  message.cpp  message.hpp  storage.cpp  storage.hpp
Database/: authorize.cpp  authorize.hpp  createTablesMysql.sql  createTablesSqlite.sql  database.cpp  database.hpp  mysql.sql  new.db  new.db-journal  query.cpp  query.hpp  request.cpp  request.hpp  sqldriver.cpp  sqldriver.hpp  sqlite.sql  test.db  test.db-journal  testdata.sql
Desktop/: desktop.cpp  desktop.hpp  desktop.ui  login.cpp  login.hpp  login.ui  macos.mm  messages.cpp  messages.hpp  options.cpp  options.hpp  options.ui  phonebook.cpp  phonebook.hpp  phonebook.ui  sessions.cpp  sessions.hpp  sessions.ui  statusbar.cpp  statusbar.hpp  statusbar.ui  toolbar.cpp  toolbar.hpp  toolbar.ui
Dialogs/: about.cpp  about.hpp  about.ui  adduser.cpp  adduser.hpp  adduser.ui  delauth.cpp  delauth.hpp  delauth.ui  devicelist.cpp  devicelist.hpp  devicelist.ui  logout.cpp  logout.hpp  logout.ui  newgroup.cpp  newgroup.hpp  newgroup.ui  resetdb.cpp  resetdb.hpp  resetdb.ui
Main/: main.cpp  manager.cpp  manager.hpp
Resources/: desktop.css  desktop.qrc  logo.icns  macos.css
Server/: contact.cpp  contact.hpp  context.cpp  context.hpp  event.cpp  event.hpp  invite.cpp  invite.hpp  ipc.cpp  ipc.hpp  macos.mm  main.cpp  main.hpp  manager.cpp  manager.hpp  output.cpp  output.hpp  provider.cpp  provider.hpp  registry.cpp  registry.hpp  server.cpp  server.hpp  zeroconf.cpp  zeroconf.hpp
Stack/: call.hpp  contact.cpp  contact.hpp  context.cpp  context.hpp  event.cpp  event.hpp  invite.hpp  registry.hpp  stack.cpp  stack.hpp
Translations/: sipwitchqt-desktop_es.ts
docker/: DOCKER.md  dockerfile  dockerfile.documentation
etc/: README.md  archive.sh  run  sipwitchd.service  sipwitchqt-bsd.sh  sipwitchqt-server.1  sipwitchqt-server.init  sipwitchqt.conf  sipwitchqt.default  sipwitchqt.init  sipwitchqt.openrc  sipwitchqt.run  sipwqt-sleep.sh
main/: main.cpp  manager.cpp  manager.hpp
qrc/: README.md
sip/: call.hpp  contact.cpp  contact.hpp  context.cpp  event.hpp  registry.hpp  stack.cpp  stack.hpp
sql/: Database.pri  database.cpp  database.hpp  query.cpp  query.hpp  request.cpp
src/: Common.pri  Database.pri  Main.pri  Stack.pri  address.cpp  address.hpp  args.cpp  args.hpp  call.cpp  call.hpp  compiler.hpp  contact.cpp  contact.hpp  context.cpp  context.hpp  control.cpp  control.hpp  crashhandler.cpp  crashhandler.hpp  database.cpp  database.hpp  endpoint.cpp  endpoint.hpp  event.cpp  event.hpp  inline.hpp  logging.cpp  logging.hpp  main.cpp  main.hpp  manager.cpp  manager.hpp  provider.cpp  provider.hpp  providerquery.cpp  queries.hpp  query.hpp  registry.cpp  registry.hpp  request.cpp  (+15 more)
sys/: Common.pri  crashhandler.cpp  logging.cpp  server.cpp  system.cpp
testdata/: ping.xml  service.conf  siptest.sh
utils/: CMakeLists.txt  ipl-sipwitch.1  ipl-sipwitch.rb  ipl-testing.rb  swcert-create.1  swcert-create.rb  swcert-read.1  swcert-read.rb  swlite-authorize.1  swlite-authorize.rb  swlite-endpoints.1  swlite-endpoints.rb  swlite-extensions.1  swlite-extensions.rb  swlite-initialize.1  swlite-initialize.rb  swlite-list.1  swlite-list.rb
xdg/: sipwitchqt-desktop.1  sipwitchqt.appdata.xml  sipwitchqt.desktop
